<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">TACU</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="net_busy">服务器正忙,请稍后再试！</string>
    <string name="net_unavailable">当前网络不可用,请检查网络设置！</string>
    <string name="market">市场</string>
    <string name="trade">交易</string>
    <string name="assets">资产中心</string>
    <string name="app_update">升级</string>
    <string name="app_update_title">发现新版本：</string>
    <string name="permission_message_failed">请在设置中允许我们:\n\n%1$s</string>
    <string name="permission_message_rationale">TACU申请获得以下权限:\n\n%1$s</string>
    <string name="permission_allow">允许</string>
    <string name="permission_refuse">不允许</string>
    <string name="switch_error">验证失败</string>
    <string name="smart_checking">智能检测中</string>
    <string name="switch_drag">拖动下方滑块</string>
    <string name="slide_inform">向右拖动滑块完成验证</string>
    <string name="verifying">验证中......</string>
    <string name="pwd_login">密码登录</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="forgot_password">忘记密码</string>
    <string name="mailbox_cannot_be_empty">账号不能为空</string>
    <string name="pwd_cannot_be_empty">密码不能为空</string>
    <string name="login_success">登录成功</string>
    <string name="Enter_the_password">登录密码</string>
    <string name="Enter_the_Google_verification_code">填写谷歌验证码</string>
    <string name="city_search">请选择国家或地区</string>
    <string name="reset_password_via_Email">邮箱找回</string>
    <string name="reset_password_via_phone">手机找回</string>
    <string name="email_hint_code">邮箱验证码</string>
    <string name="email_code">获取</string>
    <string name="new_pwd">新密码</string>
    <string name="regex_pwd">密码需设置8-16位，由字母、数字组成。</string>
    <string name="confirm_new_pwd">确认密码</string>
    <string name="submit">确认</string>
    <string name="reset_tip">非大陆地区用户手机号找回时请填写区号</string>
    <string name="your_email">邮箱地址</string>
    <string name="phone_code">手机验证码</string>
    <string name="resend">重新发送</string>
    <string name="pwd_do_not">密码不一致</string>
    <string name="invalid_email_address">邮箱格式错误</string>
    <string name="send_successfully">发送成功</string>
    <string name="success">成功</string>
    <string name="code">验证码</string>
    <string name="mobile_email_register">邮箱注册</string>
    <string name="mobile_phone_register">手机注册</string>
    <string name="input_password">密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="register">注册</string>
    <string name="register_success">注册成功</string>
    <string name="country">国籍</string>
    <string name="mobile_phone">手机号</string>
    <string name="email_null">邮箱不能为空</string>
    <string name="phone_null">手机号码不能为空</string>
    <string name="phone_invalia">请输入有效手机号码</string>
    <string name="market_selfselection">自选</string>
    <string name="vol">成交量</string>
    <string name="recharge">充币</string>
    <string name="withdrawals">提币</string>
    <string name="bind_phone_hint">验证已绑定的手机号</string>
    <string name="bind_email_hint">验证已绑定的邮箱</string>
    <string name="address">地址</string>
    <string name="payment_id">%1$s (未填写将无法到账！)</string>
    <string name="copy_address">複製地址</string>
    <string name="save_image">保存二维码</string>
    <string name="fee">手续费</string>
    <string name="coins_text">禁止向非 %1$s 地址充值，除%2$s之外的资产，任何充入%3$s地址的非%4$s资产将不可找回。使用%5$s地址充值需要%6$s个网络确认才能到账。目前不支持使用智能合约或区块奖励（Coinbase）的转账充值，智能合约或区块奖励的转账将不会上账，请您谅解。</string>
    <string name="asset_search">已有资产</string>
    <string name="fee2">手续费：</string>
    <string name="amount">数量</string>
    <string name="all">全部</string>
    <string name="please_get_the_level_of_KYC">请完成KYC2认证</string>
    <string name="add_success">添加账号成功</string>
    <string name="history">流水</string>
    <string name="please_select_address">选择提币地址</string>
    <string name="min_extract">最小提币数量</string>
    <string name="paymentid">%1$s (从TACU转出至其它平台或个人钱包时需要)</string>
    <string name="google_auth">谷歌验证码</string>
    <string name="wallet_address">钱包地址</string>
    <string name="wallet_name">钱包名称</string>
    <string name="send_successful">发送成功</string>
    <string name="auth_method">请选择验证方式</string>
    <string name="take_verify_code">请输入验证码</string>
    <string name="above_step">上一步</string>
    <string name="take_hint">系统将在30分钟内完成审核，待网络确认后即可到账。请注意，修改安全设置后的24小时内不可提币。</string>
    <string name="exchange_pwd">请先设置交易密码</string>
    <string name="market_add_selfselection">添加自选</string>
    <string name="btn_all_select">全选</string>
    <string name="btn_delete_zero">删除(0)</string>
    <string name="edit_selfselection">编辑自选</string>
    <string name="btn_complete">完成</string>
    <string name="business_edit_collect">修改自选成功！</string>
    <string name="business_edit_collect_error">修改自选失败！</string>
    <string name="self_selection_save">是否保存自选列表？</string>
    <string name="btn_delete">删除</string>
    <string name="btn_cancel_select">取消全选</string>
    <string name="the_currently_selection">当前选择:</string>
    <string name="news">公告</string>
    <string name="search_histort_text">历史记录</string>
    <string name="search_clear">清除</string>
    <string name="limit_price">限价</string>
    <string name="price">价格</string>
    <string name="lowest_obtainable_price">市价</string>
    <string name="trade_password">交易密码</string>
    <string name="trade_set_password">设置交易密码</string>
    <string name="trade_set_password2">设置密码</string>
    <string name="buy">买入</string>
    <string name="sell">卖出</string>
    <string name="highest_price">最高价</string>
    <string name="lowest_price">最低价</string>
    <string name="order_coins_success">委託成功</string>
    <string name="business_collect">添加自选成功！</string>
    <string name="business_collect_error">添加自选失败！</string>
    <string name="business_uncollect">取消自选成功！</string>
    <string name="business_uncollect_error">取消自选失败！</string>
    <string name="order_success">撤单成功</string>
    <string name="enter_trading_password">输入交易密码</string>
    <string name="order_cancel">撤销</string>
    <string name="time">时间</string>
    <string name="trade_type">交易类型</string>
    <string name="status">交易状态</string>
    <string name="transaction_amount">成交均价</string>
    <string name="open_orders">当前委託</string>
    <string name="bind_ga">开启谷歌验证</string>
    <string name="clase_ga">解除谷歌绑定</string>
    <string name="copy">複製</string>
    <string name="google_hint">"1.下载谷歌验证器APP,iOS用户登录App Store搜索“Authenticator”下载。安卓用户登录应用商店或使用手机浏览器搜索“谷歌验证器”下载。\n2. 在谷歌验证器中添加密钥并备份打开谷歌验证器，扫描下方二维码或手动输入下述密钥添加验证令牌。密钥用于手机更换或遗失时找回谷歌验证器，绑定前请务必将下述密钥备份保存。\n3.填写TACU账号，点击“完成”。</string>
    <string name="email_bind">邮箱验证</string>
    <string name="phone_bind">手机验证</string>
    <string name="latest_transactions">成交记录</string>
    <string name="kdetail_share_text">全球用户可信赖的交易平台</string>
    <string name="min_1">1分钟</string>
    <string name="min_5">5分钟</string>
    <string name="min_15">15分钟</string>
    <string name="min_30">30分钟</string>
    <string name="hour_1">1小时</string>
    <string name="day_1">1天</string>
    <string name="noweixin">请安装微信客户端!</string>
    <string name="wx">微信好友</string>
    <string name="pyq">朋友圈</string>
    <string name="share_click">确认点击后分享</string>
    <string name="unverified">未认证</string>
    <string name="verified">已认证</string>
    <string name="switch_of_trade_password">交易密码开关</string>
    <string name="login_pwd">登录密码</string>
    <string name="fingerprint_unlock">指纹解锁</string>
    <string name="pattern_lock">手势密码</string>
    <string name="set_pattern_lock">设置手势密码</string>
    <string name="authentication">认证成功</string>
    <string name="authenticating">认证中</string>
    <string name="authentication_failed">认证失败</string>
    <string name="security_setting">安全中心</string>
    <string name="Google_Authenticator">谷歌验证</string>
    <string name="contact_us">联系我们</string>
    <string name="language">语言</string>
    <string name="update">版本更新</string>
    <string name="logout" tools:ignore="ExtraTranslation">退出登录</string>
    <string name="logout_success">退出成功</string>
    <string name="email">服务邮箱</string>
    <string name="business_cooperation">商务合作</string>
    <string name="copy_success">複製成功</string>
    <string name="download">下载并安装谷歌验证器APP</string>
    <string name="bind_email">邮箱绑定</string>
    <string name="bind_phone">手机号绑定</string>
    <string name="pwd_change">修改</string>
    <string name="settings">设置</string>
    <string name="close_tradepwd_message">您已关闭交易密码输入\n每次买卖和撤单都无需输入交易密码</string>
    <string name="ga_open">已开启</string>
    <string name="ga_not">未开启</string>
    <string name="update_hint">当前已是最新版本啦</string>
    <string name="gender">性别</string>
    <string name="birthday">出生日期</string>
    <string name="no_bind">未绑定</string>
    <string name="idNumber">证件号码</string>
    <string name="passport_type">证件类型</string>
    <string name="next">下一步</string>
    <string name="Inviting_friends">邀请好友</string>
    <string name="woman">女</string>
    <string name="man">男</string>
    <string name="real_valid">证件有效期</string>
    <string name="real_to">至</string>
    <string name="real_hint">*请确保使用您本人真实身份证进行认证，我们会保证您的个人信息安全。</string>
    <string name="picker_year">年</string>
    <string name="picker_month">月</string>
    <string name="old_pwd">原密码</string>
    <string name="bind_newphone">验证新手机号</string>
    <string name="update_pwd">修改密码</string>
    <string name="market_last_price">最新价</string>
    <string name="get_sms_code">获取验证码</string>
    <string name="market_rise_and_fall">24H涨幅</string>
    <string name="market_pair">名称</string>
    <string name="market_vol">&#160;|&#160;成交量</string>
    <string name="please_perfect_follow_info">请完善以下信息方可进行交易</string>
    <string name="truename_auth">实名认证</string>
    <string name="otc_xieyi">本人已认真阅读，同意且遵守平台关于OTC场外交易的安全提示以及</string>
    <string name="binding_pay_info">绑定支付信息</string>
    <string name="go_binding">去绑定</string>
    <string name="go_auth">去认证</string>
    <string name="go_setting">去设置</string>
    <string name="go_prefect">去完善</string>
    <string name="nickname_and_head">昵称&amp;头像</string>
    <string name="buy_success">购买成功</string>
    <string name="buy_success_tip">恭喜您，已经成为平台%1$s尊享会员独有权利！</string>
    <string name="year_continue_success_tip1">到期后平台将自动从您的账户中扣除相应费用</string>
    <string name="year_continue_success_tip2">* 为了保证您续费成功，请您实时关注您的账户余额以免不足抵扣</string>
    <string name="vip_end_time">会员到期日 \n%1$s</string>
    <string name="vip_surplus_time">会员身份剩余时间：%1$s</string>
    <string name="otc_trade_rules1">1、OTC交易基本原则</string>
    <string name="otc_trade_rules2">
        &#160;&#160;&#160;&#160;(1)、本规则自发布之日起正式实施，并将不时予以修改或完善，修改或完善后的新规则自公布之日起即生效；
        \n&#160;&#160;&#160;&#160;(2)、如您不同意本规则及修改或完善后的规则内容，请立即停止使用平台服务；
        \n&#160;&#160;&#160;&#160;(3)、如您继续使用平台服务的，视为您完全理解并接受本规则及不时修改或完善后的规则内容，并自愿受其约束。</string>
    <string name="otc_trade_rules3">2、买方应遵循的原则</string>
    <string name="otc_trade_rules4">
        &#160;&#160;&#160;&#160;创建订单后，买方应当：
        \n&#160;&#160;&#160;&#160;(1)、 在订单规定的付款时间内完成支付，再点击“我已付款”；
        \n&#160;&#160;&#160;&#160;(2)、 使用本人实名付款方式、按订单金额及订单指定的收款账户以实时到账方式完成订单支付；
        \n&#160;&#160;&#160;&#160;(3)、 选择非实时到账方式支付订单的，必须事先获得卖方同意；
        \n&#160;&#160;&#160;&#160;(4)、 支付转账时不得备注“买币、买ACU、”等信息；</string>
    <string name="otc_trade_rules5">3、卖方应遵循的原则</string>
    <string name="otc_trade_rules6">
        &#160;&#160;&#160;&#160;生成订单后，卖方应当：
        \n&#160;&#160;&#160;&#160;(1)、 提供经平台认证的收款账户；
        \n&#160;&#160;&#160;&#160;(2)、 收到买方全额付款后，在订单规定时间内完成放行；
        \n&#160;&#160;&#160;&#160;(3)、 非经买方同意，不得要求买家/客服取消订单；
        \n注：非实时到账方式目前包括：支付宝转银行卡、微信转银行卡、17:00-9:00超5万订单用单笔转账等方式，随着各支付通道业务的变化，非实时到账方式的具体类型将相应进行调整。
    </string>
    <string name="otc_trade_rules7">4、用户应遵守反洗钱原则</string>
    <string name="otc_trade_rules8">
        &#160;&#160;&#160;&#160;(1)、用户应严格遵循平台对用户身份及账户的实名认证管理要求，确保在平台上显示的相关账号均系本人合法注册、使用的；
        \n&#160;&#160;&#160;&#160;(2)、用户在触发平台的反洗钱风控预警时，应积极配合平台的进一步反洗钱核实工作，并积极协助提供相关的风控举证材料（具体措施以届时平台风控审核要求为准）。
    </string>
</resources>