<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/content_bg_color"
    android:orientation="vertical">

    <include
        android:id="@+id/title"
        layout="@layout/common_titlebar" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/dp_15"
            android:paddingVertical="@dimen/dp_15">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="@dimen/dp_3"
                android:text="@string/otc_trade_rules1"
                android:textColor="@color/text_color"
                android:textSize="@dimen/text_size_sp_14" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="@dimen/dp_3"
                android:text="@string/otc_trade_rules2"
                android:textColor="@color/text_grey"
                android:textSize="@dimen/text_size_sp_14" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:lineSpacingExtra="@dimen/dp_3"
                android:text="@string/otc_trade_rules3"
                android:textColor="@color/text_color"
                android:textSize="@dimen/text_size_sp_14" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="@dimen/dp_3"
                android:text="@string/otc_trade_rules4"
                android:textColor="@color/text_grey"
                android:textSize="@dimen/text_size_sp_14" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:lineSpacingExtra="@dimen/dp_3"
                android:text="@string/otc_trade_rules5"
                android:textColor="@color/text_color"
                android:textSize="@dimen/text_size_sp_14" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="@dimen/dp_3"
                android:text="@string/otc_trade_rules6"
                android:textColor="@color/text_grey"
                android:textSize="@dimen/text_size_sp_14" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:lineSpacingExtra="@dimen/dp_3"
                android:text="@string/otc_trade_rules7"
                android:textColor="@color/text_color"
                android:textSize="@dimen/text_size_sp_14" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="@dimen/dp_3"
                android:text="@string/otc_trade_rules8"
                android:textColor="@color/text_grey"
                android:textSize="@dimen/text_size_sp_14" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_15"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/cb_xieyi"
                    android:layout_width="@dimen/dp_20"
                    android:layout_height="@dimen/dp_20"
                    android:layout_marginTop="@dimen/dp_2"
                    android:background="@drawable/checkbox_rect_default"
                    android:button="@null"
                    android:checked="false" />

                <TextView
                    android:id="@+id/tv_xieyi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_5"
                    android:textColor="@color/text_grey"
                    android:textSize="@dimen/text_size_sp_13"
                    tools:text="@string/otc_xieyi" />
            </LinearLayout>

            <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
                android:id="@+id/btn_sure"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_45"
                android:layout_marginTop="@dimen/dp_15"
                android:enabled="false"
                android:text="@string/sure"
                android:textColor="@color/text_color"
                android:textSize="@dimen/text_size_sp_14"
                app:qmui_backgroundColor="@color/color_grey"
                app:qmui_radius="@dimen/dp_3" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>