<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp_30"
    android:background="@color/content_bg_color"
    android:paddingLeft="@dimen/dp_30"
    android:paddingRight="@dimen/dp_10">

    <TextView
        android:layout_width="@dimen/dp_75"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:text="@string/market_rise_and_fall"
        android:textColor="@color/text_color"
        android:textSize="@dimen/text_size_sp_12" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/market_pair"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size_sp_12" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/market_vol"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size_sp_12" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="@dimen/dp_110"
        android:text="@string/market_last_price"
        android:textColor="@color/text_color"
        android:textSize="@dimen/text_size_sp_12" />
</RelativeLayout>