<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/dp_15">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/buy_success"
        android:textColor="@color/text_default"
        android:textSize="@dimen/text_size_sp_17" />

    <View
        android:layout_width="@dimen/dp_20"
        android:layout_height="@dimen/dp_1"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_3"
        android:background="@color/color_default" />

    <TextView
        android:id="@+id/tv_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_30"
        android:gravity="center"
        android:text="@string/buy_success_tip"
        android:textColor="@color/text_color"
        android:textSize="@dimen/text_size_sp_17" />

    <TextView
        android:id="@+id/tv_tip_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_30"
        android:gravity="center"
        android:textColor="@color/text_color"
        android:textSize="@dimen/text_size_sp_17"
        tools:text="@string/vip_end_time" />

    <TextView
        android:id="@+id/tv_tip_surplus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_30"
        android:gravity="center"
        android:textColor="@color/text_color"
        android:textSize="@dimen/text_size_sp_17"
        tools:text="@string/vip_surplus_time" />

    <TextView
        android:id="@+id/tv_tip1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_8"
        android:gravity="center_horizontal"
        android:text="@string/year_continue_success_tip1"
        android:textColor="@color/text_grey"
        android:textSize="@dimen/text_size_sp_14" />

    <TextView
        android:id="@+id/tv_tip2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_8"
        android:gravity="center_horizontal"
        android:text="@string/year_continue_success_tip2"
        android:textColor="@color/text_default"
        android:textSize="@dimen/text_size_sp_14" />

    <ImageView
        android:id="@+id/img_success"
        android:layout_width="@dimen/dp_88"
        android:layout_height="@dimen/dp_88"
        android:layout_gravity="right"
        android:layout_marginTop="@dimen/dp_40"
        android:src="@mipmap/img_kaitong_success" />
</LinearLayout>