<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="@dimen/dp_15">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_10"
        android:text="@string/please_perfect_follow_info"
        android:textColor="@color/text_grey"
        android:textSize="@dimen/text_size_sp_12" />

    <RelativeLayout
        android:id="@+id/rl_auth"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_marginHorizontal="@dimen/dp_10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/truename_auth"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size_sp_14" />

        <com.qmuiteam.qmui.alpha.QMUIAlphaButton
            android:id="@+id/btn_go_auth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@null"
            android:gravity="right|center_vertical"
            android:text="@string/go_auth"
            android:textColor="@color/text_default"
            android:textSize="@dimen/text_size_sp_13" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_marginHorizontal="@dimen/dp_10"
        android:background="@color/content_bg_color_grey" />

    <RelativeLayout
        android:id="@+id/rl_tel"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_marginHorizontal="@dimen/dp_10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/mobile_phone"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size_sp_14" />

        <com.qmuiteam.qmui.alpha.QMUIAlphaButton
            android:id="@+id/btn_go_binding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@null"
            android:gravity="right|center_vertical"
            android:text="@string/go_binding"
            android:textColor="@color/text_default"
            android:textSize="@dimen/text_size_sp_13" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_marginHorizontal="@dimen/dp_10"
        android:background="@color/content_bg_color_grey" />

    <RelativeLayout
        android:id="@+id/rl_trade_pwd"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_marginHorizontal="@dimen/dp_10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/trade_password"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size_sp_14" />

        <com.qmuiteam.qmui.alpha.QMUIAlphaButton
            android:id="@+id/btn_go_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@null"
            android:gravity="right|center_vertical"
            android:text="@string/go_setting"
            android:textColor="@color/text_default"
            android:textSize="@dimen/text_size_sp_13" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_marginHorizontal="@dimen/dp_10"
        android:background="@color/content_bg_color_grey" />

    <RelativeLayout
        android:id="@+id/rl_nickname_head"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_marginHorizontal="@dimen/dp_10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/nickname_and_head"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size_sp_14" />

        <com.qmuiteam.qmui.alpha.QMUIAlphaButton
            android:id="@+id/btn_go_prefect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@null"
            android:gravity="right|center_vertical"
            android:text="@string/go_prefect"
            android:textColor="@color/text_default"
            android:textSize="@dimen/text_size_sp_13" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_marginHorizontal="@dimen/dp_10"
        android:background="@color/content_bg_color_grey" />

    <RelativeLayout
        android:id="@+id/rl_binding_pay_info"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_marginHorizontal="@dimen/dp_10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/binding_pay_info"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size_sp_14" />

        <com.qmuiteam.qmui.alpha.QMUIAlphaButton
            android:id="@+id/btn_go_binding_pay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@null"
            android:gravity="right|center_vertical"
            android:text="@string/go_binding"
            android:textColor="@color/text_default"
            android:textSize="@dimen/text_size_sp_13" />
    </RelativeLayout>
</LinearLayout>