<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/content_bg_color_grey"
    android:orientation="vertical">

    <include
        android:id="@+id/title"
        layout="@layout/common_titlebar" />

    <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundLinearLayout
        style="@style/person_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/dp_15"
        android:paddingRight="@dimen/dp_15"
        app:qmui_backgroundColor="@color/content_bg_color"
        app:qmui_isRadiusAdjustBounds="true"
        app:qmui_radius="@dimen/dp_5">

        <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundEditText
            android:id="@+id/et_old_pwd"
            style="@style/common_edit_style"
            android:hint="@string/old_pwd"
            android:inputType="textPassword"
            android:paddingRight="@dimen/dp_5" />

        <View
            style="@style/line_french_grey" />

        <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundEditText
            android:id="@+id/et_pwd"
            style="@style/common_edit_style"
            android:hint="@string/new_pwd"
            android:inputType="textPassword"
            android:paddingRight="@dimen/dp_5" />

        <View style="@style/line_french_grey" />

        <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundEditText
            android:id="@+id/et_confirm_pwd"
            style="@style/common_edit_style"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:paddingRight="@dimen/dp_5" />
    </com.qmuiteam.qmui.widget.roundwidget.QMUIRoundLinearLayout>

    <com.qmuiteam.qmui.alpha.QMUIAlphaButton
        android:id="@+id/btn_submit"
        style="@style/btn_gradient_blue"
        android:text="@string/update_pwd" />
</LinearLayout>

