<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/content_bg_color_grey"
    android:orientation="vertical">

    <include
        android:id="@+id/title"
        layout="@layout/common_titlebar" />

    <include
        android:id="@+id/view_getcode"
        layout="@layout/view_bind_mode"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/tv_bind_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/dp_5"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginRight="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_20"
        android:text="@string/bind_newphone"
        android:textColor="@color/text_color"
        android:textSize="@dimen/text_size_sp_16" />

    <LinearLayout
        style="@style/person_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dp_15"
        android:background="@drawable/bg_shadow_card">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_48"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:drawableRight="@drawable/icon_expand_more_grey"
                android:text="+86"
                android:textColor="@color/text_grey_2"
                android:textSize="@dimen/text_size_sp_16"
                android:visibility="visible" />

            <EditText
                android:id="@+id/et_phone"
                style="@style/common_edit_style"
                android:hint="@string/mobile_phone"
                android:maxLength="30" />
        </LinearLayout>

        <View style="@style/line_french_grey" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_48">

            <EditText
                android:id="@+id/et_code"
                style="@style/common_edit_style"
                android:layout_marginRight="@dimen/dp_98"
                android:hint="@string/phone_code" />

            <com.qmuiteam.qmui.alpha.QMUIAlphaButton
                android:id="@+id/btn_code"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:background="@color/color_transparent"
                android:gravity="center_vertical|right"
                android:text="@string/get_sms_code"
                android:textColor="@color/color_default" />
        </RelativeLayout>

    </LinearLayout>

    <com.qmuiteam.qmui.alpha.QMUIAlphaButton
        android:id="@+id/btn_submit"
        style="@style/btn_gradient_blue"
        android:text="@string/sure" />
</LinearLayout>